# dance-embedding

./: .gitignore  LICENSE  README.md  install.py  monitor_videos.py  pyproject.toml  run_pipeline.sh
documents/: architecture.md  implementation-plan.md  pose_extraction.md  requirements.md  technical-considerations.md
examples/: basic_usage.py
src/dance_motion_embedding/: README.md  __init__.py  main.py  pose_extraction.py
src/dimension_reduction/: README.md  __init__.py  chunked_reduction.py  example.py  main.py  reduction_methods.py  visualizer.py
src/dimension_reduction/webapp/: server.py
src/dimension_reduction/webapp/static/: style.css
src/embedding_generation/: embedding_generator.py  motion_analyzer.py
src/pose_extraction/: README.md  __init__.py  main.py  pose_extraction.py
src/viewer/: __init__.py
src/viewer/webapp/: README.md  server.py
src/viewer/webapp/static/: app.js  config.js  index.html  pose3d.js  style.css
tests/: __init__.py  test_imports.py
